objects/PLCJob__c.object
<CustomObject>
    <fields>
        <fullName>NumberOfCycles__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>MAX Number of Cycles = 50. You can repeat creating cyclical jobs if you need to add more than 50.</inlineHelpText>
        <label>Number Of Cycles</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfParts__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Number Of Parts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnTime1__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>if(NegotiatedDate__c &gt;=  datevalue(DateTimeOfDelivery__c) &amp;&amp; DefectiveDeliverables__c = 0 &amp;&amp;  LateDeliverables__c = 0, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Time 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnTime__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>if(NegotiatedDate__c &gt;=  datevalue(DateTimeOfDelivery__c) &amp;&amp; DefectiveDeliverables__c = 0 &amp;&amp;  LateDeliverables__c = 0, &apos;Ontime&apos;, &apos;Late&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenTasks__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Open Tasks</label>
        <summaryFilterItems>
            <field>JobTask__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>JobTask__c.PLCJob__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OpportunityValue__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PLC Jobs</relationshipLabel>
        <relationshipName>PLCJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Order Request</label>
        <referenceTo>OrderRequest__c</referenceTo>
        <relationshipLabel>PLC Jobs</relationshipLabel>
        <relationshipName>PLCJobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherCostEstimate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Royalties and other data cost</inlineHelpText>
        <label>Other Cost Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OwnerEmail__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PSCCodeReview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Development work in excess of 20 hours estimated required &quot;Code Review&quot; by a member of the PTSC (Polk Technical Standards Committee) or a sub-delete of that committee.  Please select a code review contact from the following list.</inlineHelpText>
        <label>PTSC Code Review</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PLCJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Job</label>
        <referenceTo>PLCJob__c</referenceTo>
        <relationshipLabel>PLC Jobs</relationshipLabel>
        <relationshipName>PLCJob</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeerReviewJobTasks__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Peer Review Job Tasks</label>
        <summaryFilterItems>
            <field>JobTask__c.TaskName__c</field>
            <operation>equals</operation>
            <value>Peer Review</value>
        </summaryFilterItems>
        <summaryForeignKey>JobTask__c.PLCJob__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PeerReviewStatus__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Peer Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed on 1st Attempt</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeerReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Peer Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PLCJobs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimarySalesEmail__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Primary Sales Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProcessToUse__c</fullName>
        <description>POLK-WRF: This field is used for WRF related feature on PLC Job object.</description>
        <label>Process To Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics Custom Solution</fullName>
                </value>
                <value>
                    <fullName>Analytics Loyalty</fullName>
                </value>
                <value>
                    <fullName>Analytics Loyalty Compilation</fullName>
                </value>
                <value>
                    <fullName>Analytics Mapping</fullName>
                </value>
                <value>
                    <fullName>Analytics Modeling</fullName>
                </value>
                <value>
                    <fullName>Analytics Profile</fullName>
                </value>
                <value>
                    <fullName>China data-CV</fullName>
                </value>
                <value>
                    <fullName>China data-Polkinsight</fullName>
                </value>
                <value>
                    <fullName>Commercial Account File</fullName>
                </value>
                <value>
                    <fullName>Custom Solutions-OEM List</fullName>
                </value>
                <value>
                    <fullName>Custom Solutions-OEM Stat</fullName>
                </value>
                <value>
                    <fullName>Custom Solutions-Other</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Global NewReg</fullName>
                </value>
                <value>
                    <fullName>Global PARC</fullName>
                </value>
                <value>
                    <fullName>IFOF</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>NVPP</fullName>
                </value>
                <value>
                    <fullName>NVPP Online</fullName>
                </value>
                <value>
                    <fullName>PMC</fullName>
                </value>
                <value>
                    <fullName>PolkInsight</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>RSD</fullName>
                </value>
                <value>
                    <fullName>TIP</fullName>
                </value>
                <value>
                    <fullName>TIPNet System</fullName>
                </value>
                <value>
                    <fullName>TLAS</fullName>
                </value>
                <value>
                    <fullName>VIN Decoding Products Cyclical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductionWaitTime__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>SubmittedToAssigned__c  +  AssignedToStart__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Wait Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgrammerAssignedDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Programmer Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReasonForDelay__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Reason For Delay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting PO or Contract</fullName>
                </value>
                <value>
                    <fullName>Customer requests later date</fullName>
                </value>
                <value>
                    <fullName>Sales requests hold</fullName>
                </value>
                <value>
                    <fullName>Other reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonForFailure__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Reason For Failure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Formatting</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Coding</fullName>
                </value>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recall__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>IF( WorkRequestForm__r.Recall__c , &apos;Recall&apos;, &apos;Not Recall&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recall</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivedDateTime__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>WorkRequestForm__r.SubmittedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedToDelivery__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>datevalue(DateTimeOfDelivery__c)-WorkRequestForm__r.RequestedDueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested To Delivery</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestedToNegotiated__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>NegotiatedDate__c  -  WorkRequestForm__r.RequestedDueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested To Negotiated</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RerunCAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Click if you have Rerun, CAR or External Influence data to enter</inlineHelpText>
        <label>Rerun CAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoyaltyRecordsIncluded__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Royalty Records Included</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondarySalesEmail__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Secondary Sales Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SetupNotesAttached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Setup Notes Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetupNotes__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Setup Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartToDelivered__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>CASE(MOD( StartDate__c - DATE(1985,6,24),7), 

0 , CASE( MOD( datevalue(DateTimeOfDelivery__c) - StartDate__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 

1 , CASE( MOD( datevalue(DateTimeOfDelivery__c) - StartDate__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 

2 , CASE( MOD( datevalue(DateTimeOfDelivery__c) - StartDate__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 

3 , CASE( MOD( datevalue(DateTimeOfDelivery__c) - StartDate__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 

4 , CASE( MOD( datevalue(DateTimeOfDelivery__c) - StartDate__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 

5 , CASE( MOD( datevalue(DateTimeOfDelivery__c) - StartDate__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 

6 , CASE( MOD( datevalue(DateTimeOfDelivery__c) - StartDate__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 

999) 

+ 

(FLOOR(( datevalue(DateTimeOfDelivery__c) - StartDate__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Work Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>text(JobStatusOverride__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SubmittedToAssigned__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>(CASE(MOD( datevalue( SubmittedDate__c ) - DATE(1985,6,24),7), 
0 , CASE( MOD( ProgrammerAssignedDate__c - datevalue(SubmittedDate__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( ProgrammerAssignedDate__c - datevalue(SubmittedDate__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( ProgrammerAssignedDate__c - datevalue(SubmittedDate__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( ProgrammerAssignedDate__c - datevalue(SubmittedDate__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( ProgrammerAssignedDate__c - datevalue(SubmittedDate__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( ProgrammerAssignedDate__c - datevalue(SubmittedDate__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( ProgrammerAssignedDate__c - datevalue(SubmittedDate__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( ProgrammerAssignedDate__c - datevalue(SubmittedDate__c) )/7)*5) ) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Queue</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubmittedToDelivery__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>(CASE(MOD( datevalue( SubmittedDate__c ) - DATE(1985,6,24),7), 
0 , CASE( MOD (datevalue(DateTimeOfDelivery__c) - datevalue(SubmittedDate__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD (datevalue(DateTimeOfDelivery__c )- datevalue(SubmittedDate__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD (datevalue(DateTimeOfDelivery__c) - datevalue(SubmittedDate__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD (datevalue(DateTimeOfDelivery__c) - datevalue(SubmittedDate__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD (datevalue(DateTimeOfDelivery__c) - datevalue(SubmittedDate__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD (datevalue(DateTimeOfDelivery__c) - datevalue(SubmittedDate__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD (datevalue(DateTimeOfDelivery__c) - datevalue(SubmittedDate__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( datevalue(DateTimeOfDelivery__c) - datevalue(SubmittedDate__c) )/7)*5) ) - TotalDaysOnHold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Time to Serve</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team1__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Programmer&apos;s Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aftersales-Chrysler</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>ESS-Delivery</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>MCM-Analytics</fullName>
                </value>
                <value>
                    <fullName>MCM-Marketing Databases</fullName>
                </value>
                <value>
                    <fullName>MCM-Market Research</fullName>
                </value>
                <value>
                    <fullName>MCM-Target Marketing Services</fullName>
                </value>
                <value>
                    <fullName>MEL-Delivery</fullName>
                </value>
                <value>
                    <fullName>MR-Aftermarket</fullName>
                </value>
                <value>
                    <fullName>MR-Commercial</fullName>
                </value>
                <value>
                    <fullName>MR-Loyalty</fullName>
                </value>
                <value>
                    <fullName>MR-Market Reporting BI</fullName>
                </value>
                <value>
                    <fullName>MR-Network Management</fullName>
                </value>
                <value>
                    <fullName>Planning Solutions</fullName>
                </value>
                <value>
                    <fullName>PolkConnect Analytics</fullName>
                </value>
                <value>
                    <fullName>PolkConnect System</fullName>
                </value>
                <value>
                    <fullName>VIN-Recall</fullName>
                </value>
                <value>
                    <fullName>VIN-VIN Decoders</fullName>
                </value>
                <value>
                    <fullName>VIN-VVS</fullName>
                </value>
                <value>
                    <fullName>Visualization Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamGroup__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Team &amp; Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIS</fullName>
                </value>
                <value>
                    <fullName>Analytic Solutions - Loyalty</fullName>
                </value>
                <value>
                    <fullName>Analytic Solutions - Services</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Commercial/Aftermarket</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>OEM Marketing - Analytics</fullName>
                </value>
                <value>
                    <fullName>OEM Marketing - List Fulfillment</fullName>
                </value>
                <value>
                    <fullName>OEM Marketing - Marketing Development</fullName>
                </value>
                <value>
                    <fullName>OEM Marketing - Recall/Trace</fullName>
                </value>
                <value>
                    <fullName>OEM Marketing - Unified Fulfillment</fullName>
                </value>
                <value>
                    <fullName>OEM Stat - Fulfillment</fullName>
                </value>
                <value>
                    <fullName>OEM Stat - PolkInsight</fullName>
                </value>
                <value>
                    <fullName>Software Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThirdResource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Third Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PLCJobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThirdTeam__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Third Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>CAP</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>OEM-List</fullName>
                </value>
                <value>
                    <fullName>OEM-Stat</fullName>
                </value>
                <value>
                    <fullName>Software Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalActualCost__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>ActualCost__c  +  (JobActualHours__c  * CostFactor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalDaysOnHold__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>DaysOnHold1__c  +  DaysOnHold2__c +  DaysOnHold3__c + DaysOnHold4__c  +  DaysOnHold5__c  +  ActiveDaysOnHold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days On Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDeliverables__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Total Deliverables</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalEstimatedCost__c</fullName>
        <description>This field is used for WRF-POLK. Total Cost based on Estimated hours</description>
        <formula>ActualCost__c + ( JobEstimatedHours__c  * CostFactor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalJobEstimate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Programming Hours Estimate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalReworkHours__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Total Rework Hours</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRFQuality__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Setup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved, Set-up Required</fullName>
                </value>
                <value>
                    <fullName>Approved, No Set-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WRFSubBrand__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>text (WorkRequestForm__r.SubBrand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by the St. Albans production team.</inlineHelpText>
        <label>WRF Sub Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WRFSubmitted__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>WorkRequestForm__r.SubmittedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WRF Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Work Request Form</label>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>PLC Jobs</relationshipLabel>
        <relationshipName>PLCJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PLC Job</label>
    <listViews>
        <fullName>APACWRF_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC WRF</label>
        <queue>APACWRF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AustraliaWRF_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Australia WRF</label>
        <queue>AustraliaWRF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Autonews_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Autonews</label>
        <queue>Autonews</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CanadaProduction_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada</label>
        <queue>Canada</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada</label>
        <queue>Canada</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EuropeanWRF_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>European WRF</label>
        <queue>EuropeanWRF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PolkConnectAnalytics_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>PolkConnect Analytics</label>
        <queue>PolkConnectAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PolkConnectSystem_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>PolkConnect System</label>
        <queue>PolkConnectSystem</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SalesforceSupport_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Salesforce Support</label>
        <queue>SalesforceSupport</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VFACTS_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>VFACTS</label>
        <queue>VFACTS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Visualization_PLCJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Visualization</label>
        <queue>Visualization</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PLC-{0000}</displayFormat>
        <label>PLC Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLC Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DateTimeOfDeliveryExceededNegotiatedDate</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISBLANK(DateTimeOfDelivery__c)) &amp;&amp; (DATEVALUE(DateTimeOfDelivery__c) &gt; NegotiatedDate__c) &amp;&amp;
(LateDeliverables__c == 0 || ISBLANK(LateDeliverables__c))</errorConditionFormula>
        <errorMessage>Date &amp; Time of Delivery is greater than the Negotiated Date. Please enter value &gt; 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EncryptionKeyIsBlank</fullName>
        <active>true</active>
        <errorConditionFormula>EncryptionRequired__c = true &amp;&amp; ISBLANK(EncryptionKey__c)</errorConditionFormula>
        <errorDisplayField>EncryptionKey__c</errorDisplayField>
        <errorMessage>Field Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EncryptionRequiredIsTrue</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.PLCJob__c, $Setup.SystemMutedValidationRules__c.All__c), False,EncryptionRequired__c = false &amp;&amp; NOT(ISBLANK(EncryptionKey__c)))</errorConditionFormula>
        <errorDisplayField>EncryptionKey__c</errorDisplayField>
        <errorMessage>&apos;Encryption Key&apos; cannot be filled unless &apos;Encryption Required &apos; is true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FTPRequired</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.PLCJob__c, $Setup.SystemMutedValidationRules__c.All__c), False,FTPRequired__c &lt;&gt; true &amp;&amp; (NOT(ISBLANK(FTPPath__c))|| NOT(ISBLANK(FTPUserID__c)) || FTPInformationInWRF__c = true))</errorConditionFormula>
        <errorMessage>&apos;FTP Information in WRF,&apos;FTP Path&apos;, &apos;FTP User ID&apos; cannot be filled unless &apos;FTP Required &apos; is True</errorMessage>
    </validationRules>
</CustomObject>